Closed Bug 1259872 Opened 9 years ago Closed 9 years ago

Incorrect culling of header on steamcommunity.com

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla51
Tracking Status
firefox48 --- wontfix
firefox49 --- fixed
firefox50 --- fixed
firefox51 --- verified

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Keywords: regression)

Attachments

(1 file)

STR: 0. Use overlay scrollbars on OS X. 1. Go to http://steamcommunity.com/app/255710/discussions/0/451850849200785255/ 2. Press space to scroll down by one page. 3. Press shift+space to scroll back up. Now the header will briefly have white parts on the left and the right side. These parts get redrawn with the correct dark blue color once we trigger a paint when the scrollbars fade away. While the white is visible, you can also see remnant scrollbar pieces, indicating that we're not compositing anything to that part of the window. Usually this happens if we have an opaque ContainerLayer with contents that don't cover the complete visible region of that ContainerLayer.
Apparently the window width needs to be <= 1438px for this to happen (the width of the fixed background image).
This is caused by hideAll being set to true in PostprocessRetainedLayers even if the opaque layer has a scrolled clip. I have a fix.
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Attachment #8778039 - Flags: review?(matt.woodrow) → review+
Comment on attachment 8778039 [details] Bug 1259872 - Don't cull all layers under an opaque layer that covers the container if that layer has a scrolled clip. https://reviewboard.mozilla.org/r/69452/#review66576
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/a008184ea135 Don't cull all layers under an opaque layer that covers the container if that layer has a scrolled clip. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment on attachment 8778039 [details] Bug 1259872 - Don't cull all layers under an opaque layer that covers the container if that layer has a scrolled clip. Approval Request Comment [Feature/regressing bug #]: APZ [User impact if declined]: parts of some pages missing after scrolling, e.g. on http://steamcommunity.com or on http://meetup.com/ . [Describe test coverage new/current, TreeHerder]: this patch adds a test [Risks and why]: extremely low risk, extremely small patch. The patch just turns off an optimization in the case where the optimization is wrong. [String/UUID change made/needed]: none
Attachment #8778039 - Flags: approval-mozilla-beta?
Attachment #8778039 - Flags: approval-mozilla-aurora?
On meetup.com the steps to reproduce are: 0. Be on OS X with overlay scrollbars enabled. 1. Go to http://www.meetup.com/Toronto-Winter-And-Summer-Trips-Activities/ 2. Scroll down and wait for a second. 3. Scroll back up. The whole header turns white for a moment.
Hi Markus, could you please verify this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(mstange)
Sure. Just tested, it's fixed.
Status: RESOLVED → VERIFIED
Flags: needinfo?(mstange)
Comment on attachment 8778039 [details] Bug 1259872 - Don't cull all layers under an opaque layer that covers the container if that layer has a scrolled clip. APZ related regression, Fix has stabilized on Nightly for 2 weeks, Aurora50+, Beta49+
Attachment #8778039 - Flags: approval-mozilla-beta?
Attachment #8778039 - Flags: approval-mozilla-beta+
Attachment #8778039 - Flags: approval-mozilla-aurora?
Attachment #8778039 - Flags: approval-mozilla-aurora+
(In reply to Markus Stange [:mstange] from comment #10) > Sure. Just tested, it's fixed. Great Thanks!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: