Bug 1259872 - Don't cull all layers under an opaque layer that covers the container if that layer has a scrolled clip. r=mattwoodrow, a=ritu

MozReview-Commit-ID: Abmm28HiLqR

--HG--
rename : layout/reftests/async-scrolling/bg-fixed-child-no-culling-ref.html => layout/reftests/async-scrolling/bg-fixed-child-no-culling-1-ref.html
rename : layout/reftests/async-scrolling/bg-fixed-child-no-culling.html => layout/reftests/async-scrolling/bg-fixed-child-no-culling-1.html
extra : source : a008184ea135006842f13e75e879e56e60432dd0